Bugzilla-34089, NICPS-49: added "add attachments" feature on Mobile HTML Client
[Features]
- Attachment button is shown when Cc/Bcc is clicked.
- A file is uploaded when Save or Send button is clicked
- Multiple files can be selected. It depends on a device OS/browser.

[Known issue]
- All fields (subject, message body, recipients and attachments) become blank if a message size exceeds the limit. If you save the composing message before uploading an attachment, you can find it in Drafts folder.

--- a/WebRoot/css/ipad.css
+++ b/WebRoot/css/ipad.css
@@ -1600,6 +1600,10 @@ span.aleft > div:first-child, .contactHeader {
     z-index: 9030;
 }
 
+.ZhACAttach {
+    z-index: 9020;
+}
+
 .yui-ac-bcd .left{
 	border-bottom: none !important;
 }
